# customer-insights

./: README.md  pyproject.toml
customer_insights/: model.ipynb
